El logo del nav es link al index

--- a/serie-the_last_of_us/contacto/contacto.html
+++ b/serie-the_last_of_us/contacto/contacto.html
@@ -26,11 +26,13 @@
     <header>
       <nav class="barra-navegacion">
         <div class="logo-navegacion">
+          <a href="../index.html">
           <img
             src="../imagenes/logos/logo2.png"
             alt="Logo de The Last Of Us"
             loading="lazy"
           />
+          </a>
         </div>
 
         <h1 class="titulo-nav">Contacto</h1>
