--- a/serie-the_last_of_us/index.html
+++ b/serie-the_last_of_us/index.html
@@ -21,11 +21,13 @@
     <header>
       <nav class="barra-navegacion">
         <div class="logo-navegacion">
+          <a href="./index.html">
           <img
             src="./imagenes/logos/logo2.png"
             alt="Logo de The Last Of Us"
             loading="lazy"
           />
+          </a>
         </div>
 
         <h1 id="inicio" class="titulo-nav">Inicio</h1>
