--- a/serie-the_last_of_us/contacto/contacto.html
+++ b/serie-the_last_of_us/contacto/contacto.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Antonio&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      xintegrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../Styles/general.css" />
     <link rel="stylesheet" href="../Styles/navegacion.css" />
     <link rel="stylesheet" href="../Styles/contenido.css" />
@@ -22,80 +28,80 @@
     <link rel="stylesheet" href="../Styles/formularios.css" />
   </head>
 
-  <body id="top" class="contacto-background">
-    <header>
-      <nav class="barra-navegacion">
-        <div class="logo-navegacion">
-          <a href="../index.html">
-          <img
-            src="../imagenes/logos/logo2.png"
-            alt="Logo de The Last Of Us"
-            loading="lazy"
-          />
+  <body class="contacto-background">
+    <header id="top">
+      <nav
+        class="navbar navbar-dark navbar-expand-lg fixed-top barra-navegacion-custom"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+            <img
+              src="../imagenes/logos/logo2.png"
+              alt="Logo de The Last Of Us"
+              loading="lazy"
+              class="logo-navegacion-bootstrap"
+            />
           </a>
+          <h1 class="titulo-nav-bootstrap">Contacto</h1>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasDarkNavbar"
+            aria-controls="offcanvasDarkNavbar"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div
+            class="offcanvas offcanvas-end text-bg-dark"
+            tabindex="-1"
+            id="offcanvasDarkNavbar"
+            aria-labelledby="offcanvasDarkNavbarLabel"
+          >
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
+                Menú de Navegación
+              </h5>
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../historia/historia.html"
+                    >Historia</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../temporadas/temporadas.html"
+                    >Temporadas</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../personajes/personajes.html"
+                    >Personajes</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../eventos/eventos.html">Eventos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-
-        <h1 class="titulo-nav">Contacto</h1>
-
-        <input
-          class="menu-hamburguesa"
-          type="checkbox"
-          name=""
-          id="menu-hamburguesa"
-        />
-
-        <label class="etiqueta-hamburguesa" for="menu-hamburguesa">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="50px"
-            viewBox="0 -960 960 960"
-            width="50px"
-            fill="#fd0511"
-            class="icono-lista icono-hamburguesa"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-            />
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="50px"
-            viewBox="0 -960 960 960"
-            width="50px"
-            fill="#fd0511"
-            class="icono-lista icono-cerrar"
-          >
-            <path
-              d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
-            />
-          </svg>
-        </label>
-
-        <ul class="lista-enlaces">
-          <li>
-            <a href="../index.html" class="enlace">Inicio</a>
-          </li>
-          <li>
-            <a href="../historia/historia.html" class="enlace">Historia</a>
-          </li>
-          <li>
-            <a href="../temporadas/temporadas.html" class="enlace"
-              >Temporadas</a
-            >
-          </li>
-          <li>
-            <a href="../personajes/personajes.html" class="enlace"
-              >Personajes</a
-            >
-          </li>
-          <li>
-            <a href="../eventos/eventos.html" class="enlace">Eventos</a>
-          </li>
-          <li>
-            <a href="./contacto.html" class="enlace">Contacto</a>
-          </li>
-        </ul>
       </nav>
     </header>
 
@@ -161,7 +167,7 @@
             target="_blank"
             aria-label="HBO Max"
           >
-            <img src="../imagenes/iconos/icono-hbo.png" alt="Icono HBO Max"/>
+            <img src="../imagenes/iconos/icono-hbo.png" alt="Icono HBO Max" />
             <span>HBO Max</span>
           </a>
           <a
@@ -169,7 +175,7 @@
             target="_blank"
             aria-label="Twitter"
           >
-            <img src="../imagenes/iconos/icono-tw.png" alt="Icono Twitter"/>
+            <img src="../imagenes/iconos/icono-tw.png" alt="Icono Twitter" />
             <span>Twitter</span>
           </a>
           <a
@@ -183,11 +189,11 @@
         </div>
       </section>
     </main>
-<footer>
+    <footer>
       <p>2025 - Parcial 2 - Lautaro Rajib Cadelago</p>
       <div class="footer-github">
         <a
-          href="https://github.com/LautaroCadelago/DVweb1/tree/main/Serie%20-%20The%20Last%20Of%20Us"
+          href="https://github.com/LautaroCadelago/DVweb1/tree/main/serie-the_last_of_us"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -196,5 +202,10 @@
       </div>
       <a href="#top" class="ir-arriba">Ir arriba</a>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      xintegrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
